@@ -3,7 +3,7 @@
 .\" Copyright © 1995-1996 Ian Jackson
 .\" Copyright © 2000 Wichert Akkerman <wakkerma@debian.org>
 .\" Copyright © 2007-2008 Frank Lichtenheld <djpig@debian.org>
-.\" Copyright © 2008-2011 Guillem Jover <guillem@debian.org>
+.\" Copyright © 2008-2013 Guillem Jover <guillem@debian.org>
 .\" Copyright © 2008-2012 Raphaël Hertzog <hertzog@debian.org>
 .\"
 .\" This is free software; you can redistribute it and/or modify
@@ -19,7 +19,7 @@
 .\" You should have received a copy of the GNU General Public License
 .\" along with this program.  If not, see <http://www.gnu.org/licenses/>.
 .
-.TH dpkg\-buildpackage 1 "2012-05-04" "Debian Project" "dpkg utilities"
+.TH dpkg\-buildpackage 1 "2013-03-31" "Debian Project" "dpkg utilities"
 .SH NAME
 dpkg\-buildpackage \- build binary or source packages from sources
 .
@@ -214,6 +214,10 @@ Do not sign the source package.
 .TP
 .BR \-uc
 Do not sign the \fB.changes\fP file.
+.TP
+.BR \-\-force\-sign
+Force the signing of the resulting files (since dpkg 1.17.0),
+regardless of \fB\-us\fP or \fB\-uc\fP or other internal heuristics.
 .P
 .BR \-i [\fIregexp\fP]
 .br
