@@ -20,6 +20,7 @@ dpkg (1.17.0) UNRELEASED; urgency=low
   * Do not pass -e in shell script shebangs, set it in the body.
   * Add new dpkg-parsechangelog --show-field option to print a field value.
     Closes: #284664
+  * Add new dpkg-buildpackage --force-sign option.
 
  -- Guillem Jover <guillem@debian.org>  Fri, 03 Aug 2012 13:21:00 +0200
 
